fix langlink on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -69,7 +69,9 @@ body {
 		background: none;
 		border: none;
 		&.home {
-			top: 1rem;
+			top: 0;
+			font-size: 10px;
+			font-weight: 500;
 		}
 	}
 }
